--- a/index.html
+++ b/index.html
@@ -3,178 +3,249 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Myopia Simulation</title>
+    <title>Yen vs Dollar: Understanding Currency Strength</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            margin: 0;
-            background-color: #f0f0f0;
-        }
-        .container {
-            background-color: white;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            line-height: 1.6;
+            color: #333;
             max-width: 800px;
-            width: 90%;
+            margin: 0 auto;
+            padding: 20px;
         }
         h1, h2 {
-            text-align: center;
+            color: #2c3e50;
         }
-        .scene-container {
-            display: flex;
-            justify-content: space-between;
-            margin-bottom: 20px;
-        }
-        .scene-wrapper {
-            width: 48%;
-        }
-        .scene {
+        .chart-container {
             width: 100%;
+            max-width: 600px;
+            margin: 20px auto;
+            padding: 20px;
+            border: 1px solid #ddd;
+        }
+        .chart {
+            display: flex;
+            align-items: flex-end;
             height: 300px;
-            background: linear-gradient(to bottom, #87CEEB, #90EE90);
-            position: relative;
-            border-radius: 10px;
-            overflow: hidden;
+            border-bottom: 2px solid #333;
+            border-left: 2px solid #333;
         }
-        .object {
-            position: absolute;
+        .bar {
+            flex: 1;
+            margin: 0 1px;
+            background-color: #3498db;
+            transition: height 0.5s ease;
+        }
+        .x-axis {
             display: flex;
-            flex-direction: column;
-            align-items: center;
-            transition: filter 0.3s ease;
+            justify-content: space-around;
+            margin-top: 10px;
         }
-        .object-icon {
-            width: 50px;
-            height: 50px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            border-radius: 50%;
-            margin-bottom: 5px;
-            font-size: 24px;
-        }
-        .object-text {
-            text-align: center;
-            font-weight: bold;
+        .x-axis span {
             font-size: 12px;
         }
-        .controls {
-            margin-top: 20px;
-        }
-        .slider {
-            width: 100%;
+        .factor {
+            background-color: #f0f0f0;
+            border-left: 5px solid #3498db;
+            padding: 10px;
             margin-bottom: 10px;
         }
-        .info {
-            background-color: #e6f3ff;
-            padding: 10px;
-            border-radius: 5px;
-            margin-top: 20px;
-            display: none;
+        .timeline {
+            position: relative;
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+        .timeline::after {
+            content: '';
+            position: absolute;
+            width: 6px;
+            background-color: #3498db;
+            top: 0;
+            bottom: 0;
+            left: 50%;
+            margin-left: -3px;
+        }
+        .container {
+            padding: 10px 40px;
+            position: relative;
+            background-color: inherit;
+            width: 50%;
+        }
+        .container::after {
+            content: '';
+            position: absolute;
+            width: 25px;
+            height: 25px;
+            right: -17px;
+            background-color: white;
+            border: 4px solid #3498db;
+            top: 15px;
+            border-radius: 50%;
+            z-index: 1;
+        }
+        .left {
+            left: 0;
+        }
+        .right {
+            left: 50%;
+        }
+        .left::before {
+            content: " ";
+            height: 0;
+            position: absolute;
+            top: 22px;
+            width: 0;
+            z-index: 1;
+            right: 30px;
+            border: medium solid #f0f0f0;
+            border-width: 10px 0 10px 10px;
+            border-color: transparent transparent transparent #f0f0f0;
+        }
+        .right::before {
+            content: " ";
+            height: 0;
+            position: absolute;
+            top: 22px;
+            width: 0;
+            z-index: 1;
+            left: 30px;
+            border: medium solid #f0f0f0;
+            border-width: 10px 10px 10px 0;
+            border-color: transparent #f0f0f0 transparent transparent;
+        }
+        .right::after {
+            left: -16px;
+        }
+        .content {
+            padding: 20px 30px;
+            background-color: #f0f0f0;
+            position: relative;
+            border-radius: 6px;
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Myopia Simulation</h1>
-        <div class="scene-container">
-            <div class="scene-wrapper">
-                <h2>Normal Vision</h2>
-                <div id="normal-scene" class="scene"></div>
-            </div>
-            <div class="scene-wrapper">
-                <h2>Myopic Vision</h2>
-                <div id="myopic-scene" class="scene"></div>
+    <h1>Yen vs Dollar: Understanding Currency Strength</h1>
+    
+    <p>The Japanese Yen has generally been weaker than the US Dollar in recent years. This page explains the key factors behind this trend and provides a historical context for understanding currency dynamics between these two major economies.</p>
+
+    <h2>Current Exchange Rate</h2>
+    <p>As of April 2024, 1 US Dollar is worth approximately 150 Japanese Yen. This rate fluctuates daily based on various economic factors.</p>
+
+    <div class="chart-container">
+        <h3>JPY per 1 USD (2014-2024)</h3>
+        <div class="chart" id="exchangeRateChart"></div>
+        <div class="x-axis" id="chartXAxis"></div>
+    </div>
+
+    <h2>Key Factors Influencing Yen Weakness</h2>
+
+    <div class="factor">
+        <h3>1. Monetary Policy Divergence</h3>
+        <p>The Bank of Japan has maintained ultra-low interest rates and continued quantitative easing, while the US Federal Reserve has been raising interest rates. This divergence makes the Dollar more attractive for investors seeking higher yields.</p>
+    </div>
+
+    <div class="factor">
+        <h3>2. Economic Growth Differences</h3>
+        <p>The US economy has shown stronger growth compared to Japan's in recent years. Stronger economic growth typically leads to a stronger currency.</p>
+    </div>
+
+    <div class="factor">
+        <h3>3. Inflation Rates</h3>
+        <p>Japan has struggled with deflation or very low inflation for decades, while the US has seen higher inflation rates. Higher inflation in the US has led to expectations of tighter monetary policy, supporting the Dollar.</p>
+    </div>
+
+    <div class="factor">
+        <h3>4. Trade Balance</h3>
+        <p>Japan's trade balance has been affected by increased energy imports following the Fukushima disaster. This has put pressure on the Yen.</p>
+    </div>
+
+    <div class="factor">
+        <h3>5. Safe-Haven Status</h3>
+        <p>While both currencies are considered safe-havens, the Dollar often sees more inflows during global uncertainties due to its status as the world's primary reserve currency.</p>
+    </div>
+
+    <h2>Historical Context: Yen-Dollar Exchange Rate Timeline</h2>
+
+    <div class="timeline">
+        <div class="container left">
+            <div class="content">
+                <h3>1971</h3>
+                <p>End of Bretton Woods system. Yen begins to float against the Dollar.</p>
             </div>
         </div>
-        <div class="controls">
-            <label for="myopia-slider">Adjust Myopia Level: <span id="myopia-level">0</span></label>
-            <input type="range" id="myopia-slider" class="slider" min="0" max="10" step="0.1" value="0">
+        <div class="container right">
+            <div class="content">
+                <h3>1985</h3>
+                <p>Plaza Accord leads to Yen appreciation against the Dollar.</p>
+            </div>
         </div>
-        <button id="info-toggle">Show Info</button>
-        <div id="info" class="info">
-            <h3>What is Myopia?</h3>
-            <p>Myopia, or nearsightedness, is a vision condition where nearby objects are clear, but distant ones appear blurry. 
-            It occurs when the eye grows too long, causing light to focus in front of the retina instead of directly on it.
-            Importantly, myopia does not cause objects to appear smaller, only less clear at a distance.</p>
-            <h3>Symptoms:</h3>
-            <ul>
-                <li>Distant objects and text appear blurry, but not smaller</li>
-                <li>Squinting to see clearly</li>
-                <li>Eye strain and headaches</li>
-                <li>Difficulty seeing while driving, especially at night</li>
-            </ul>
+        <div class="container left">
+            <div class="content">
+                <h3>1995</h3>
+                <p>Yen reaches post-war high of 79.75 per Dollar.</p>
+            </div>
+        </div>
+        <div class="container right">
+            <div class="content">
+                <h3>2002</h3>
+                <p>Japan's "Lost Decade" continues, keeping Yen weak.</p>
+            </div>
+        </div>
+        <div class="container left">
+            <div class="content">
+                <h3>2011</h3>
+                <p>Fukushima disaster leads to Yen appreciation due to expectation of repatriation flows.</p>
+            </div>
+        </div>
+        <div class="container right">
+            <div class="content">
+                <h3>2012</h3>
+                <p>Shinzo Abe elected, introduces "Abenomics" leading to Yen depreciation.</p>
+            </div>
+        </div>
+        <div class="container left">
+            <div class="content">
+                <h3>2020-2024</h3>
+                <p>COVID-19 pandemic and subsequent recovery. Diverging monetary policies lead to further Yen weakness.</p>
+            </div>
         </div>
     </div>
 
+    <h2>Conclusion</h2>
+    <p>The relative weakness of the Yen against the Dollar is a result of complex economic factors and policy decisions over time. While short-term fluctuations occur, the long-term trend has been influenced by diverging monetary policies, economic growth patterns, and global economic events. Understanding these factors provides insight into not just the Yen-Dollar dynamic, but also broader principles of currency valuation and international economics.</p>
+
     <script>
-        const objects = [
-            { name: 'Mountain', distance: 100, color: '#228B22', icon: '🏔️', text: '100m' },
-            { name: 'House', distance: 50, color: '#FF0000', icon: '🏠', text: '50m' },
-            { name: 'Tree', distance: 20, color: '#008000', icon: '🌳', text: '20m' },
-            { name: 'Car', distance: 10, color: '#0000FF', icon: '🚗', text: '10m' },
-            { name: 'Person', distance: 5, color: '#FFD700', icon: '👤', text: '5m' },
-        ];
+        document.addEventListener('DOMContentLoaded', function() {
+            const data = [
+                {year: '2014', rate: 105.85},
+                {year: '2015', rate: 121.05},
+                {year: '2016', rate: 116.96},
+                {year: '2017', rate: 112.14},
+                {year: '2018', rate: 110.42},
+                {year: '2019', rate: 109.01},
+                {year: '2020', rate: 106.78},
+                {year: '2021', rate: 109.83},
+                {year: '2022', rate: 131.13},
+                {year: '2023', rate: 141.67},
+                {year: '2024', rate: 150.00}
+            ];
 
-        function createScene(elementId, applyBlur = false) {
-            const scene = document.getElementById(elementId);
-            objects.forEach((obj, index) => {
-                const objectElement = document.createElement('div');
-                objectElement.className = 'object';
-                objectElement.style.left = `${index * 20}%`;
-                objectElement.style.bottom = `${10 + index * 10}%`;
+            const chart = document.getElementById('exchangeRateChart');
+            const xAxis = document.getElementById('chartXAxis');
 
-                const iconElement = document.createElement('div');
-                iconElement.className = 'object-icon';
-                iconElement.style.backgroundColor = obj.color;
-                iconElement.textContent = obj.icon;
+            const maxRate = Math.max(...data.map(d => d.rate));
 
-                const textElement = document.createElement('div');
-                textElement.className = 'object-text';
-                textElement.textContent = obj.text;
+            data.forEach(item => {
+                const bar = document.createElement('div');
+                bar.className = 'bar';
+                bar.style.height = `${(item.rate / maxRate) * 100}%`;
+                bar.title = `${item.year}: ${item.rate} JPY per USD`;
+                chart.appendChild(bar);
 
-                objectElement.appendChild(iconElement);
-                objectElement.appendChild(textElement);
-                scene.appendChild(objectElement);
-            });
-        }
-
-        function updateBlur(myopiaLevel) {
-            const myopicScene = document.getElementById('myopic-scene');
-            const objectElements = myopicScene.getElementsByClassName('object');
-            Array.from(objectElements).forEach((objElement, index) => {
-                const blur = Math.max(0, (myopiaLevel * objects[index].distance) / 20);
-                objElement.style.filter = `blur(${blur}px)`;
-            });
-        }
-
-        document.addEventListener('DOMContentLoaded', () => {
-            createScene('normal-scene');
-            createScene('myopic-scene', true);
-
-            const slider = document.getElementById('myopia-slider');
-            const myopiaLevelDisplay = document.getElementById('myopia-level');
-            slider.addEventListener('input', (e) => {
-                const level = e.target.value;
-                myopiaLevelDisplay.textContent = level;
-                updateBlur(level);
-            });
-
-            const infoToggle = document.getElementById('info-toggle');
-            const info = document.getElementById('info');
-            infoToggle.addEventListener('click', () => {
-                if (info.style.display === 'none') {
-                    info.style.display = 'block';
-                    infoToggle.textContent = 'Hide Info';
-                } else {
-                    info.style.display = 'none';
-                    infoToggle.textContent = 'Show Info';
-                }
+                const label = document.createElement('span');
+                label.textContent = item.year;
+                xAxis.appendChild(label);
             });
         });
     </script>
