--- a/index.html
+++ b/index.html
@@ -3,38 +3,85 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yen vs Dollar: Understanding Currency Strength</title>
+    <title>Yen vs Dollar: Currency Dynamics</title>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Source+Sans+Pro:wght@400;600&display=swap" rel="stylesheet">
     <style>
+        :root {
+            --primary-color: #121212;
+            --secondary-color: #666;
+            --accent-color: #4e83b3;
+            --background-color: #ffffff;
+            --text-color: #333;
+            --chart-color: #4e83b3;
+            --chart-highlight: #e63946;
+        }
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Source Sans Pro', sans-serif;
             line-height: 1.6;
-            color: #333;
-            max-width: 800px;
+            color: var(--text-color);
+            max-width: 1000px;
             margin: 0 auto;
             padding: 20px;
+            background-color: var(--background-color);
         }
-        h1, h2 {
-            color: #2c3e50;
+        h1, h2, h3 {
+            font-family: 'Playfair Display', serif;
+            color: var(--primary-color);
+            letter-spacing: -0.5px;
+        }
+        h1 {
+            font-size: 3em;
+            text-align: center;
+            margin-bottom: 30px;
+            border-bottom: 1px solid var(--secondary-color);
+            padding-bottom: 20px;
+        }
+        h2 {
+            font-size: 2em;
+            margin-top: 40px;
+        }
+        h3 {
+            font-size: 1.5em;
+            color: var(--secondary-color);
+        }
+        p {
+            font-size: 18px;
+            margin-bottom: 20px;
         }
         .chart-container {
             width: 100%;
-            max-width: 600px;
-            margin: 20px auto;
+            margin: 40px auto;
             padding: 20px;
-            border: 1px solid #ddd;
+            background-color: #f9f9f9;
+            border: 1px solid #e1e1e1;
         }
         .chart {
             display: flex;
             align-items: flex-end;
-            height: 300px;
-            border-bottom: 2px solid #333;
-            border-left: 2px solid #333;
+            height: 400px;
+            border-bottom: 2px solid var(--secondary-color);
+            border-left: 2px solid var(--secondary-color);
+            padding-top: 20px;
+            position: relative;
         }
         .bar {
             flex: 1;
             margin: 0 1px;
-            background-color: #3498db;
+            background-color: var(--chart-color);
             transition: height 0.5s ease;
+            position: relative;
+        }
+        .bar:hover {
+            background-color: var(--chart-highlight);
+        }
+        .bar::before {
+            content: attr(data-value);
+            position: absolute;
+            top: -25px;
+            left: 50%;
+            transform: translateX(-50%);
+            font-size: 14px;
+            color: var(--secondary-color);
         }
         .x-axis {
             display: flex;
@@ -42,178 +89,164 @@
             margin-top: 10px;
         }
         .x-axis span {
-            font-size: 12px;
+            font-size: 14px;
+            color: var(--secondary-color);
+            transform: rotate(-45deg);
+            margin-top: 10px;
         }
-        .factor {
-            background-color: #f0f0f0;
-            border-left: 5px solid #3498db;
-            padding: 10px;
-            margin-bottom: 10px;
+        .trend-line {
+            position: absolute;
+            width: 100%;
+            height: 2px;
+            background-color: var(--chart-highlight);
+            top: 50%;
+            transform: translateY(-50%);
+        }
+        .factors-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 20px;
+            margin-top: 40px;
+        }
+        .factor-card {
+            background-color: #f9f9f9;
+            border: 1px solid #e1e1e1;
+            padding: 20px;
+            transition: box-shadow 0.3s ease;
+        }
+        .factor-card:hover {
+            box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+        }
+        .factor-card h3 {
+            margin-top: 0;
+            color: var(--accent-color);
         }
         .timeline {
             position: relative;
-            max-width: 1200px;
-            margin: 0 auto;
+            max-width: 800px;
+            margin: 40px auto;
+            padding-top: 20px;
         }
         .timeline::after {
             content: '';
             position: absolute;
-            width: 6px;
-            background-color: #3498db;
+            width: 100%;
+            height: 2px;
+            background-color: var(--secondary-color);
             top: 0;
-            bottom: 0;
-            left: 50%;
-            margin-left: -3px;
-        }
-        .container {
-            padding: 10px 40px;
-            position: relative;
-            background-color: inherit;
-            width: 50%;
-        }
-        .container::after {
-            content: '';
-            position: absolute;
-            width: 25px;
-            height: 25px;
-            right: -17px;
-            background-color: white;
-            border: 4px solid #3498db;
-            top: 15px;
-            border-radius: 50%;
-            z-index: 1;
-        }
-        .left {
             left: 0;
         }
-        .right {
-            left: 50%;
-        }
-        .left::before {
-            content: " ";
-            height: 0;
-            position: absolute;
-            top: 22px;
-            width: 0;
-            z-index: 1;
-            right: 30px;
-            border: medium solid #f0f0f0;
-            border-width: 10px 0 10px 10px;
-            border-color: transparent transparent transparent #f0f0f0;
-        }
-        .right::before {
-            content: " ";
-            height: 0;
-            position: absolute;
-            top: 22px;
-            width: 0;
-            z-index: 1;
-            left: 30px;
-            border: medium solid #f0f0f0;
-            border-width: 10px 10px 10px 0;
-            border-color: transparent #f0f0f0 transparent transparent;
-        }
-        .right::after {
-            left: -16px;
-        }
-        .content {
-            padding: 20px 30px;
-            background-color: #f0f0f0;
+        .event {
             position: relative;
-            border-radius: 6px;
+            margin-bottom: 30px;
+            padding-top: 20px;
+        }
+        .event::before {
+            content: '';
+            position: absolute;
+            width: 12px;
+            height: 12px;
+            background-color: var(--accent-color);
+            border-radius: 50%;
+            top: -6px;
+            left: 0;
+        }
+        .event-content {
+            margin-left: 20px;
+        }
+        .event h3 {
+            margin: 0;
+            color: var(--accent-color);
         }
     </style>
 </head>
 <body>
-    <h1>Yen vs Dollar: Understanding Currency Strength</h1>
+    <h1>Yen vs Dollar: Currency Dynamics</h1>
     
-    <p>The Japanese Yen has generally been weaker than the US Dollar in recent years. This page explains the key factors behind this trend and provides a historical context for understanding currency dynamics between these two major economies.</p>
-
-    <h2>Current Exchange Rate</h2>
-    <p>As of April 2024, 1 US Dollar is worth approximately 150 Japanese Yen. This rate fluctuates daily based on various economic factors.</p>
+    <p>The Japanese Yen has generally been weaker than the US Dollar in recent years. This analysis explores the key factors behind this trend and provides historical context for understanding currency dynamics between these two major economies.</p>
 
     <div class="chart-container">
-        <h3>JPY per 1 USD (2014-2024)</h3>
-        <div class="chart" id="exchangeRateChart"></div>
+        <h2>JPY per 1 USD (2014-2024)</h2>
+        <div class="chart" id="exchangeRateChart">
+            <div class="trend-line"></div>
+        </div>
         <div class="x-axis" id="chartXAxis"></div>
     </div>
 
     <h2>Key Factors Influencing Yen Weakness</h2>
 
-    <div class="factor">
-        <h3>1. Monetary Policy Divergence</h3>
-        <p>The Bank of Japan has maintained ultra-low interest rates and continued quantitative easing, while the US Federal Reserve has been raising interest rates. This divergence makes the Dollar more attractive for investors seeking higher yields.</p>
-    </div>
-
-    <div class="factor">
-        <h3>2. Economic Growth Differences</h3>
-        <p>The US economy has shown stronger growth compared to Japan's in recent years. Stronger economic growth typically leads to a stronger currency.</p>
-    </div>
-
-    <div class="factor">
-        <h3>3. Inflation Rates</h3>
-        <p>Japan has struggled with deflation or very low inflation for decades, while the US has seen higher inflation rates. Higher inflation in the US has led to expectations of tighter monetary policy, supporting the Dollar.</p>
-    </div>
-
-    <div class="factor">
-        <h3>4. Trade Balance</h3>
-        <p>Japan's trade balance has been affected by increased energy imports following the Fukushima disaster. This has put pressure on the Yen.</p>
-    </div>
-
-    <div class="factor">
-        <h3>5. Safe-Haven Status</h3>
-        <p>While both currencies are considered safe-havens, the Dollar often sees more inflows during global uncertainties due to its status as the world's primary reserve currency.</p>
+    <div class="factors-grid">
+        <div class="factor-card">
+            <h3>Monetary Policy Divergence</h3>
+            <p>Bank of Japan: Ultra-low rates<br>US Federal Reserve: Rate hikes</p>
+        </div>
+        <div class="factor-card">
+            <h3>Economic Growth</h3>
+            <p>US: Stronger growth<br>Japan: Sluggish growth</p>
+        </div>
+        <div class="factor-card">
+            <h3>Inflation Rates</h3>
+            <p>Japan: Deflation/low inflation<br>US: Higher inflation</p>
+        </div>
+        <div class="factor-card">
+            <h3>Trade Balance</h3>
+            <p>Japan: Increased energy imports<br>US: Improving trade balance</p>
+        </div>
+        <div class="factor-card">
+            <h3>Safe-Haven Status</h3>
+            <p>Dollar: Primary reserve currency<br>Yen: Secondary safe-haven</p>
+        </div>
     </div>
 
     <h2>Historical Context: Yen-Dollar Exchange Rate Timeline</h2>
 
     <div class="timeline">
-        <div class="container left">
-            <div class="content">
+        <div class="event">
+            <div class="event-content">
                 <h3>1971</h3>
                 <p>End of Bretton Woods system. Yen begins to float against the Dollar.</p>
             </div>
         </div>
-        <div class="container right">
-            <div class="content">
+        <div class="event">
+            <div class="event-content">
                 <h3>1985</h3>
                 <p>Plaza Accord leads to Yen appreciation against the Dollar.</p>
             </div>
         </div>
-        <div class="container left">
-            <div class="content">
+        <div class="event">
+            <div class="event-content">
                 <h3>1995</h3>
                 <p>Yen reaches post-war high of 79.75 per Dollar.</p>
             </div>
         </div>
-        <div class="container right">
-            <div class="content">
+        <div class="event">
+            <div class="event-content">
                 <h3>2002</h3>
                 <p>Japan's "Lost Decade" continues, keeping Yen weak.</p>
             </div>
         </div>
-        <div class="container left">
-            <div class="content">
+        <div class="event">
+            <div class="event-content">
                 <h3>2011</h3>
-                <p>Fukushima disaster leads to Yen appreciation due to expectation of repatriation flows.</p>
+                <p>Fukushima disaster leads to Yen appreciation due to repatriation flows.</p>
             </div>
         </div>
-        <div class="container right">
-            <div class="content">
+        <div class="event">
+            <div class="event-content">
                 <h3>2012</h3>
                 <p>Shinzo Abe elected, introduces "Abenomics" leading to Yen depreciation.</p>
             </div>
         </div>
-        <div class="container left">
-            <div class="content">
+        <div class="event">
+            <div class="event-content">
                 <h3>2020-2024</h3>
-                <p>COVID-19 pandemic and subsequent recovery. Diverging monetary policies lead to further Yen weakness.</p>
+                <p>COVID-19 pandemic and recovery. Diverging monetary policies lead to further Yen weakness.</p>
             </div>
         </div>
     </div>
 
     <h2>Conclusion</h2>
-    <p>The relative weakness of the Yen against the Dollar is a result of complex economic factors and policy decisions over time. While short-term fluctuations occur, the long-term trend has been influenced by diverging monetary policies, economic growth patterns, and global economic events. Understanding these factors provides insight into not just the Yen-Dollar dynamic, but also broader principles of currency valuation and international economics.</p>
+    <p>The Yen's weakness against the Dollar stems from a complex interplay of economic factors and policy decisions. While short-term fluctuations occur, the long-term trend reflects diverging monetary policies, economic growth patterns, and global events. This analysis provides insights into the Yen-Dollar dynamic and broader principles of currency valuation in international economics.</p>
 
     <script>
         document.addEventListener('DOMContentLoaded', function() {
@@ -235,12 +268,14 @@
             const xAxis = document.getElementById('chartXAxis');
 
             const maxRate = Math.max(...data.map(d => d.rate));
+            const minRate = Math.min(...data.map(d => d.rate));
 
-            data.forEach(item => {
+            data.forEach((item, index) => {
                 const bar = document.createElement('div');
                 bar.className = 'bar';
-                bar.style.height = `${(item.rate / maxRate) * 100}%`;
-                bar.title = `${item.year}: ${item.rate} JPY per USD`;
+                const height = ((item.rate - minRate) / (maxRate - minRate)) * 100;
+                bar.style.height = `${height}%`;
+                bar.setAttribute('data-value', item.rate.toFixed(2));
                 chart.appendChild(bar);
 
                 const label = document.createElement('span');
