--- a/puzzle.html
+++ b/puzzle.html
@@ -21,6 +21,11 @@
     <main>
         <h1>AI Conceptle</h1>
         
+        <section id="progress-container">
+            <p>Puzzles Solved: <span id="puzzles-solved">0</span></p>
+            <p>Knowledge Points: <span id="knowledge-points">0</span></p>
+        </section>
+        
         <section id="game-container">
             <h2>Guess the AI Term</h2>
             <p>Domain: <span id="domain"></span></p>
