--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Conceptle - An AI-Generated Word Game</title>
+    <title>AI Wordle - An AI-Generated Word Game</title>
     <style>
         body {
             font-family: 'Helvetica Neue', Arial, sans-serif;
@@ -82,7 +82,7 @@
         </svg>
     </div>
     <div class="container">
-        <h1>AI Conceptle</h1>
+        <h1>AI Wordle</h1>
         <p>Embark on a journey through the world of Artificial Intelligence with this AI-generated word game. Test your knowledge of AI concepts in a fun, Wordle-inspired challenge!</p>
         <a href="puzzle.html" class="play-button">Play Now</a>
     </div>
