--- a/puzzle.html
+++ b/puzzle.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Conceptle - Guess the AI Term!</title>
+    <title>AI Wordle - Guess the AI Term!</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <main>
-        <h1>AI Conceptle</h1>
+        <h1>AI Wordle</h1>
         
         <section id="game-container">
             <div id="progress-display">
