--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     </div>
     <div class="container">
         <h1>AI Wordle</h1>
-        <p>Embark on a journey through the world of Artificial Intelligence with this AI-generated word game. Test your knowledge of AI concepts in a fun, Wordle-inspired challenge!</p>
+        <p>Test your knowledge of AI concepts in a fun, Wordle-inspired challenge!</p>
         <a href="puzzle.html" class="play-button">Play Now</a>
     </div>
 </body>
