--- a/puzzle.html
+++ b/puzzle.html
@@ -41,6 +41,8 @@
             <input type="text" id="guess-input" placeholder="Enter your guess">
             <button onclick="makeGuess()">Submit Guess</button>
             
+            <div id="next-puzzle-container"></div>
+            
             <button id="restart-button" onclick="restartGame()" style="display: none;">Start New Round</button>
         </section>
 
