--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Wordle - An AI-Generated Word Game</title>
+    <title>AI Learning Games</title>
     <style>
         body {
             font-family: 'Helvetica Neue', Arial, sans-serif;
@@ -12,44 +12,52 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
+            min-height: 100vh;
             margin: 0;
-            overflow: hidden;
+            padding: 20px;
+            box-sizing: border-box;
         }
         .container {
-            text-align: center;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 20px;
+            max-width: 1200px;
+        }
+        .game-box {
             background-color: #ffffff;
-            padding: 2rem;
             border-radius: 15px;
             box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
-            max-width: 500px;
-            width: 90%;
+            padding: 2rem;
+            width: 300px;
+            text-align: center;
         }
-        h1 {
-            font-size: 2.5rem;
+        h2 {
+            font-size: 1.8rem;
             margin-bottom: 1rem;
             color: #3498db;
         }
         p {
-            font-size: 1.1rem;
-            line-height: 1.6;
-            margin-bottom: 2rem;
+            font-size: 1rem;
+            line-height: 1.5;
+            margin-bottom: 1.5rem;
         }
         .play-button {
             display: inline-block;
             background-color: #2ecc71;
             color: white;
             text-decoration: none;
-            padding: 12px 24px;
+            padding: 10px 20px;
             border-radius: 25px;
-            font-size: 1.2rem;
-            transition: background-color 0.3s ease;
+            font-size: 1rem;
+            transition: background-color 0.3s ease, transform 0.3s ease;
         }
         .play-button:hover {
             background-color: #27ae60;
+            transform: translateY(-2px);
         }
         .floating-shapes {
-            position: absolute;
+            position: fixed;
             width: 100%;
             height: 100%;
             overflow: hidden;
@@ -82,9 +90,19 @@
         </svg>
     </div>
     <div class="container">
-        <h1>AI Wordle</h1>
-        <p>Test your knowledge of AI concepts in a fun, Wordle-inspired challenge!</p>
-        <a href="puzzle.html" class="play-button">Play Now</a>
+        <div class="game-box">
+            <h2>AI Wordle</h2>
+            <p>Guess AI-related terms and learn about key concepts in this engaging word puzzle game.</p>
+            <a href="wordle/index.html" class="play-button">Play AI Wordle</a>
+        </div>
+        <!-- Add more game boxes here as you create new games -->
+        <!-- Example:
+        <div class="game-box">
+            <h2>AI Quiz</h2>
+            <p>Test your knowledge of artificial intelligence with this interactive quiz game.</p>
+            <a href="quiz/index.html" class="play-button">Play AI Quiz</a>
+        </div>
+        -->
     </div>
 </body>
 </html>
