add bonus animation

--- a/index.html
+++ b/index.html
@@ -95,14 +95,11 @@
             <p>Guess AI-related terms and learn about key concepts in this engaging word puzzle game.</p>
             <a href="wordle/index.html" class="play-button">Play AI Wordle</a>
         </div>
-        <!-- Add more game boxes here as you create new games -->
-        <!-- Example:
         <div class="game-box">
-            <h2>AI Quiz</h2>
-            <p>Test your knowledge of artificial intelligence with this interactive quiz game.</p>
-            <a href="quiz/index.html" class="play-button">Play AI Quiz</a>
+            <h2>Python Blocks</h2>
+            <p>Drag, drop, and decode in this Python programming puzzle, where you'll piece together code blocks to solve challenges and unlock a mesmerizing 3D surprise.</p>
+            <a href="python-blocks/index.html" class="play-button">Play Python Blocks</a>
         </div>
-        -->
     </div>
 </body>
 </html>
