--- a/index.html
+++ b/index.html
@@ -100,6 +100,11 @@
             <p>Drag, drop, and decode in this Python programming puzzle, where you'll piece together code blocks to solve challenges and unlock a mesmerizing 3D surprise.</p>
             <a href="python-blocks/index.html" class="play-button">Play Python Blocks</a>
         </div>
+        <div class="game-box">
+            <h2>Flappy Loss Curve</h2>
+            <p>Guide the AI bird through obstacles along the loss curve to achieve the highest score!</p>
+            <a href="flappy/index.html" class="play-button">Play Python Blocks</a>
+        </div>
     </div>
 </body>
 </html>
