--- a/index.html
+++ b/index.html
@@ -105,6 +105,11 @@
             <p>Guide the AI bird through obstacles along the loss curve to achieve the highest score!</p>
             <a href="flappy/index.html" class="play-button">Play Python Blocks</a>
         </div>
+        <div class="game-box">
+            <h2>Saddle Point Simulation</h2>
+            <p>An interactive 3D visualization demonstrating saddle points and local minima in optimization landscapes.</p>
+            <a href="marble/index.html" class="play-button">Play Python Blocks</a>
+        </div>
     </div>
 </body>
 </html>
