--- a/index.html
+++ b/index.html
@@ -93,22 +93,27 @@
         <div class="game-box">
             <h2>AI Wordle</h2>
             <p>Guess AI-related terms and learn about key concepts in this engaging word puzzle game.</p>
-            <a href="wordle/index.html" class="play-button">Play AI Wordle</a>
+            <a href="wordle/index.html" class="play-button">Play</a>
         </div>
         <div class="game-box">
             <h2>Python Blocks</h2>
-            <p>Drag, drop, and decode in this Python programming puzzle, where you'll piece together code blocks to solve challenges and unlock a mesmerizing 3D surprise.</p>
-            <a href="python-blocks/index.html" class="play-button">Play Python Blocks</a>
+            <p>Drag, drop, and decode in this Python programming puzzle, where you'll piece together code blocks to solve challenges.</p>
+            <a href="python-blocks/index.html" class="play-button">Play</a>
         </div>
         <div class="game-box">
             <h2>Flappy Loss Curve</h2>
             <p>Guide the AI bird through obstacles along the loss curve to achieve the highest score!</p>
-            <a href="flappy/index.html" class="play-button">Play Python Blocks</a>
+            <a href="flappy/index.html" class="play-button">Play</a>
         </div>
         <div class="game-box">
             <h2>Saddle Point Simulation</h2>
             <p>An interactive 3D visualization demonstrating saddle points and local minima in optimization landscapes.</p>
-            <a href="marble/index.html" class="play-button">Play Python Blocks</a>
+            <a href="marble/index.html" class="play-button">Play</a>
+        </div>
+        <div class="game-box">
+            <h2>Sliding Tiles</h2>
+            <p>A sliding puzzle where players rearrange scrambled image tiles to recreate the original picture</p>
+            <a href="sliding/index.html" class="play-button">Play</a>
         </div>
     </div>
 </body>
