add color cascade

--- a/index.html
+++ b/index.html
@@ -123,6 +123,11 @@
             <p>A sliding puzzle where players rearrange scrambled image tiles to recreate the original picture</p>
             <a href="sliding/index.html" class="play-button">Play</a>
         </div>
+        <div class="game-box">
+            <h2>Color Cascade</h2>
+            <p>Flood the grid with color in this addictive puzzle game where strategy meets simplicity.</p>
+            <a href="color/index.html" class="play-button">Play</a>
+        </div>
     </div>
 </body>
 </html>
