--- a/index.html
+++ b/index.html
@@ -128,6 +128,11 @@
             <p>Flood the grid with color in this addictive puzzle game where strategy meets simplicity.</p>
             <a href="color/index.html" class="play-button">Play</a>
         </div>
+        <div class="game-box">
+            <h2>DVD Gravity Game</h2>
+            <p>Guide a colorful DVD logo through a cosmic dance of bounces and gravity wells, scoring points as it kisses the corners of your screen.</p>
+            <a href="dvd/index.html" class="play-button">Play</a>
+        </div>
     </div>
 </body>
 </html>
