--- a/index.html
+++ b/index.html
@@ -133,6 +133,11 @@
             <p>Guide a colorful DVD logo through a cosmic dance of bounces and gravity wells, scoring points as it kisses the corners of your screen.</p>
             <a href="dvd/index.html" class="play-button">Play</a>
         </div>
+        <div class="game-box">
+            <h2>Cosmic Simulation</h2>
+            <p>Explore a dynamic cosmic simulation where particle densities shape a vibrant, evolving universe.</p>
+            <a href="particle/index.html" class="play-button">Play</a>
+        </div>
     </div>
 </body>
 </html>
