add music intervals game

--- a/index.html
+++ b/index.html
@@ -62,7 +62,12 @@
                 <p>Visualize and interact with different neural network architectures as you watch activations propagate through their intricate layers.</p>
                 <a href="neon/index.html" class="play-button">Play</a>
             </div>
-        </div>
+            <div class="game-box">
+                <h2>Intervals</h2>
+                <p>Explore musical intervals in this interactive game that tests your ear and music theory knowledge.</p>
+                <a href="intervals/index.html" class="play-button">Play</a>
+            </div>
+</div>
     </div>
 </body>
 </html>
