--- a/intervals/index.html
+++ b/intervals/index.html
@@ -69,7 +69,7 @@
         <div id="staff-container">
             <div id="vexflow-staff"></div>
         </div>
-        <p id="instruction-text">Click "Play Interval" to hear the interval, then select your answer from the dropdown.</p>
+        <p id="instruction-text"></p>
         <div id="piano-container"></div>
         <div class="game-controls">
             <button id="play-interval">Play Interval</button>
@@ -84,11 +84,11 @@
         <h2>How to Play</h2>
         <p>Explore musical intervals in three different modes:</p>
         <ul>
-            <li>Identify Interval: Name the interval shown on the staff.</li>
-            <li>Create Interval: Select the correct note to create the given interval.</li>
-            <li>Ear Training: Listen to an interval and identify it.</li>
+            <li>Identify Interval: Listen to and view the interval, then select the correct name from the dropdown.</li>
+            <li>Create Interval: Click on piano keys to create the requested interval.</li>
+            <li>Ear Training: Listen to an interval and identify it without visual cues.</li>
         </ul>
-        <p>Click on piano keys or use your computer keyboard to select notes. Earn points for correct answers!</p>
+        <p>Use the on-screen controls to play intervals and make your selections. Earn points for correct answers!</p>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.49/Tone.js"></script>
     <script src="script.js"></script>
