--- a/index.html
+++ b/index.html
@@ -67,6 +67,11 @@
                 <p>Explore musical intervals in this interactive game that tests your ear and music theory knowledge.</p>
                 <a href="intervals/index.html" class="play-button">Play</a>
             </div>
+            <div class="game-box">
+                <h2>AI News</h2>
+                <p>A news reader that aggregates and displays the latest news articles from selected RSS feeds.</p>
+                <a href="rss/index.html" class="play-button">Play</a>
+            </div>
 </div>
     </div>
 </body>
