--- a/index.html
+++ b/index.html
@@ -80,6 +80,11 @@
                 <p>An interactive cellular automaton simulation where you can create and observe evolving patterns on a dynamic grid.</p>
                 <a href="automata/index.html" class="play-button">Play</a>
             </div>
+            <div class="game-box">
+                <h2>Map</h2>
+                <p>Interactive world map visualizing global population data with color-coded countries and hover-over information.</p>
+                <a href="map/index.html" class="play-button">Play</a>
+            </div>
 </div>
     </div>
 </body>
