--- a/index.html
+++ b/index.html
@@ -85,6 +85,11 @@
                 <p>Interactive world map visualizing global population data with color-coded countries and hover-over information.</p>
                 <a href="map/index.html" class="play-button">Play</a>
             </div>
+            <div class="game-box">
+                <h2>Whiteboard</h2>
+                <p>A modern, interactive whiteboard with drawing tools, camera integration, and cloud saving capabilities.</p>
+                <a href="whiteboard/index.html" class="play-button">Play</a>
+            </div>
 </div>
     </div>
 </body>
