--- a/index.html
+++ b/index.html
@@ -90,6 +90,11 @@
                 <p>A modern, interactive whiteboard with drawing tools, camera integration, and cloud saving capabilities.</p>
                 <a href="whiteboard/index.html" class="play-button">Play</a>
             </div>
+            <div class="game-box">
+                <h2>Jokes</h2>
+                <p>A simple web app that displays a new joke every time you visit</p>
+                <a href="jokes/index.html" class="play-button">Play</a>
+            </div>
 </div>
     </div>
 </body>
