--- a/index.html
+++ b/index.html
@@ -105,6 +105,11 @@
                 <p>Slither through a vibrant world, grow your snake, and outmaneuver opponents in this multiplayer game.</p>
                 <a href="slither/index.html" class="play-button">Play</a>
             </div>
+            <div class="game-box">
+                <h2>Slots</h2>
+                <p>Spin the reels in this colorful Emoji Slot Machine and aim for the cherry jackpot!</p>
+                <a href="slots/index.html" class="play-button">Play</a>
+            </div>
 </div>
     </div>
 </body>
