--- a/slots/index.html
+++ b/slots/index.html
@@ -10,9 +10,15 @@
     <div class="container">
         <h1>Emoji Slot Machine</h1>
         <div id="slot-machine">
-            <div id="reel1" class="reel">🍎</div>
-            <div id="reel2" class="reel">🍋</div>
-            <div id="reel3" class="reel">🍒</div>
+            <div class="reel-container">
+                <div id="reel1" class="reel"></div>
+            </div>
+            <div class="reel-container">
+                <div id="reel2" class="reel"></div>
+            </div>
+            <div class="reel-container">
+                <div id="reel3" class="reel"></div>
+            </div>
         </div>
         <button id="spin-button">Spin ($1)</button>
         <p id="balance">Balance: $<span>10</span></p>
