--- a/shader/index.html
+++ b/shader/index.html
@@ -8,10 +8,14 @@
 </head>
 <body>
     <div class="container">
-        <canvas id="glCanvas"></canvas>
+        <div class="canvas-container">
+            <canvas id="glCanvas"></canvas>
+        </div>
         <div class="controls">
             <button id="prevShader">&lt;</button>
-            <span id="shaderName">Ripple</span>
+            <div class="shader-info">
+                <span id="shaderName">Ripple</span>
+            </div>
             <button id="nextShader">&gt;</button>
         </div>
         <div id="shaderExplanation"></div>
