--- a/index.html
+++ b/index.html
@@ -110,6 +110,11 @@
                 <p>Spin the reels in this colorful Emoji Slot Machine and aim for the cherry jackpot!</p>
                 <a href="slots/index.html" class="play-button">Play</a>
             </div>
+            <div class="game-box">
+                <h2>Shaders</h2>
+                <p>Explore a collection of mesmerizing WebGL shaders, from rippling waves to psychedelic vortexes.</p>
+                <a href="shader/index.html" class="play-button">Play</a>
+            </div>
 </div>
     </div>
 </body>
