--- a/index.html
+++ b/index.html
@@ -115,6 +115,11 @@
                 <p>Explore a collection of mesmerizing WebGL shaders, from rippling waves to psychedelic vortexes.</p>
                 <a href="shader/index.html" class="play-button">Play</a>
             </div>
+            <div class="game-box">
+                <h2>Teapot</h2>
+                <p>Utah Teapot WebGL Demo: Explore the iconic 3D model that revolutionized computer graphics.</p>
+                <a href="vertex/index.html" class="play-button">Play</a>
+            </div>
 </div>
     </div>
 </body>
