--- a/index.html
+++ b/index.html
@@ -120,6 +120,11 @@
                 <p>Utah Teapot WebGL Demo: Explore the iconic 3D model that revolutionized computer graphics.</p>
                 <a href="vertex/index.html" class="play-button">Play</a>
             </div>
+            <div class="game-box">
+                <h2>MinGPT</h2>
+                <p>A mini language model trained on Shakespeare, powered by TensorFlow.js in your browser.</p>
+                <a href="gpt/index.html" class="play-button">Play</a>
+            </div>
 </div>
     </div>
 </body>
