--- a/index.html
+++ b/index.html
@@ -125,6 +125,11 @@
                 <p>A mini language model trained on Shakespeare, powered by TensorFlow.js in your browser.</p>
                 <a href="gpt/index.html" class="play-button">Play</a>
             </div>
+            <div class="game-box">
+                <h2>Ray Trace</h2>
+                <p>A 3D Donut Ray Tracer.</p>
+                <a href="raytrace/index.html" class="play-button">Play</a>
+            </div>
 </div>
     </div>
 </body>
