--- a/rbtree/index.html
+++ b/rbtree/index.html
@@ -27,6 +27,7 @@
         </section>
         <section id="visualization">
             <h2>Red-Black Tree Visualization</h2>
+            <p class="instruction">Click on a node to delete it.</p> <!-- Added Instruction -->
             <div id="tree-container"></div>
             <div id="controls">
                 <button id="insert-btn">Insert Node</button>
