--- a/index.html
+++ b/index.html
@@ -130,6 +130,11 @@
                 <p>A 3D Donut Ray Tracer.</p>
                 <a href="raytrace/index.html" class="play-button">Play</a>
             </div>
+            <div class="game-box">
+                <h2>Red Black Tree</h2>
+                <p>Explore self-balancing binary search trees with real-time insertion and deletion operations.</p>
+                <a href="rbtree/index.html" class="play-button">Play</a>
+            </div>
 </div>
     </div>
 </body>
