change to transformer. still buggy

--- a/gpt/index.html
+++ b/gpt/index.html
@@ -25,7 +25,7 @@
             <p>This is a minimal version of how large language models like GPT work, but on a much smaller scale. By using TensorFlow.js, the model can leverage GPU acceleration in supported browsers, making the training process faster.</p>
         </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.18.0/dist/tf.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest"> </script>
     <script src="script.js"></script>
 </body>
 </html>
